@@ -185,6 +185,32 @@ struct install_item insthier[] = {
   {INST_COPY, "uint32_unpack.c", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "uint64_pack.c", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "uint64_unpack.c", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_direntry.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_direntry.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_endian.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_endian.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_fd.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_fd.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_float32.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_float32.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_float64.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_float64.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int16.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int16.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int32.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int32.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int64.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_int64.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_sig_action.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_sig_action.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_sig_pmask.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_sig_pmask.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint16.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint16.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint32.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint32.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint64.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "_uint64.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "alloc.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "alloc.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "array.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
@@ -199,6 +225,8 @@ struct install_item insthier[] = {
   {INST_COPY, "close.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "closeonexec.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "closeonexec.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "ctxt.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "ctxt.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "dir_array.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "dir_array.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "dir_hash.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
@@ -233,6 +261,8 @@ struct install_item insthier[] = {
   {INST_COPY, "get_opt.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "hashtable.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "hashtable.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "install.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
+  {INST_COPY, "install.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "int16.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "int16.h", 0, ctxt_incdir, ctxt_owner, ctxt_group, 0644},
   {INST_COPY, "int32.h", 0, ctxt_repos, ctxt_owner, ctxt_group, 0644},
