@@ -156,3 +156,5 @@
 20060916 version: corelib-0.42 (no release)
 20061003 code: get_opt_reset()
 20061003 version: corelib-0.43
+20061007 code: missing header files in insthier
+20061003 version: corelib-0.431
